# eql

./: .gitignore  Cargo.toml  dprint.json  readme.md  rust-toolchain.toml
.cargo/: config.toml
apps/website/: Cargo.toml
apps/website/src/: app.rs  main.rs
apps/website/static/: manifest.json  sample-collective.json  sample-token.json
crates/eql/: Cargo.toml  readme.md
crates/eql/src/: lib.rs  parser.rs
crates/eql/src/query/: ast.rs
crates/eql/src/schema/: ast.rs
crates/eql/src/shared/: ast.rs
crates/eql/src/snapshots/: edgeqlx__parser__tests__simple_module_tokens.snap
crates/eql_derive/: Cargo.toml
crates/eql_factory/: Cargo.toml
crates/eql_factory/src/: lib.rs  make.rs
crates/eql_lsp/: Cargo.toml
crates/eql_parser/: Cargo.toml
crates/eql_syntax/: Cargo.toml  build.rs  edgeql.ungram  esdl.ungram
crates/eql_syntax/src/: lib.rs  source_type.rs  syntax_node.rs
crates/maso/: Cargo.toml  readme.md
crates/maso_router/: Cargo.toml
crates/maso_router/src/: lib.rs
crates/maso_router_macro/: Cargo.toml
crates/maso_router_macro/src/: lib.rs
crates/skribble/: Cargo.toml
crates/skribble_macro/: Cargo.toml
docs/: maso.md  readme.md
xtask/: Cargo.toml  build.rs  edgedb.ungram
xtask/src/: bin.rs  cfg.rs  dev_server.rs  dist.rs  lib.rs  main.rs  symlink_root.rs  wasm_opt.rs  watch.rs
xtask/src/codegen/: edgedb.ungram  generate_ast.rs  generate_macros.rs  generate_node_factory.rs  generate_nodes.rs  generate_nodes_mut.rs  generate_syntax_factory.rs  generate_syntax_kinds.rs  kinds.rs  macros.rs  mod.rs  nodes.rs
