[workspace]
members = ["crates/*", "xtask"]
default-members = ["crates/*", "xtask"]

[workspace.dependencies]
anyhow = "1.0.66"
bitflags = "1.3.2"
cfg-if = "1.0.0"
countme = "3.0.1"
dashmap = "5.4.0"
drop_bomb = "0.1.5"
edgedb-derive = { git = "https://github.com/edgedb/edgedb-rust", rev = "431d62a" }
edgedb-errors = { git = "https://github.com/edgedb/edgedb-rust", rev = "431d62a" }
edgedb-protocol = { git = "https://github.com/edgedb/edgedb-rust", rev = "431d62a" }
edgedb-tokio = { git = "https://github.com/edgedb/edgedb-rust", rev = "431d62a" }
edgeql-parser = { git = "https://github.com/edgedb/edgedb", rev = "555a77a0f" }
expect-test = "1.4.0"
indexmap = "1.9.1"
insta = "1.21.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rome_console = { git = "https://github.com/rome/tools", rev = "99db51ff19" }
rome_diagnostics = { git = "https://github.com/rome/tools", rev = "99db51ff19" }
rome_rowan = { git = "https://github.com/rome/tools", rev = "99db51ff19" }
rustc-hash = "1.1.0"
smallvec = "1.10.0"
tokio = "1.21.2"
tracing = "0.1.37"
