[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
binary-install = "0.0.2"
cargo_metadata = "0.15.0"
cargo_toml = "0.12.4"
clap = { version = "4.0.13", features = ["derive"] }
env_logger = "0.9.1"
fs_extra = "1.2.0"
fstrings = "0.2.3"
home = "0.5.4"
lazy_static = "1.4.0"
log = "0.4.17"
notify = "5.0.0"
regex = "1.6.0"
run_script = "0.10.0"
sass-rs = "0.2.2"
version_check = "0.9.4"
walkdir = "2.3.2"
# NOTE: we don't depend on this crate but we need to activate this feature otherwise it's super slow
walrus = { version = "0.19.0", features = ["parallel"] }
wasm-bindgen-cli-support = "0.2.83"

[target.'cfg(unix)'.dependencies]
libc = "0.2.135"

[dev-dependencies]
cargo-edit = "0.11.5"
cargo-insta = "1.21.0"
expectest = "0.12.0"
insta = "1.21.0"
