[package]
name = "xtask"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cargo_metadata = "0.15.1"
cargo_toml = "0.13.0"
clap = { version = "4.0.19", features = ["derive"] }
dprint = "0.32.2"
env_logger = "0.9.1"
fstrings = "0.2.3"
home = "0.5.4"
log = "0.4.17"
regex = "1.6.0"
version_check = "0.9.4"
xshell = "0.2.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.137"

[dev-dependencies]
cargo-edit = "0.11.5"
cargo-insta = "1.21.0"
expectest = "0.12.0"
insta = "1.21.0"
