[package]
name = "eql"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.6.6"
edgedb-derive = "0.4.0"
edgedb-tokio = "0.3.0"
edgeql-parser = { workspace = true }
indexmap = { workspace = true }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.37"

[dev-dependencies]
insta = { workspace = true }
