[package]
name = "eql_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tower-lsp = "0.17.0"

[dev-dependencies]
insta = { workspace = true }
