[package]
name = "eql_parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { workspace = true }
cfg-if = { workspace = true }
drop_bomb = { workspace = true }
eql_factory = { path = "../eql_factory" }
eql_syntax = { path = "../eql_syntax" }
indexmap = { workspace = true }
rome_console = { workspace = true }
rome_diagnostics = { workspace = true }
rome_rowan = { workspace = true }
smallvec = { workspace = true, features = ["union", "const_new"] }
tracing = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
insta = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
