[package]
name = "eql_syntax"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rome_rowan.workspace = true
schemars = "0.8.11"
serde = "1.0.147"

[dev-dependencies]
insta.workspace = true

[features]
default = []
