[package]
name = "eql_syntax"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rome_rowan.workspace = true
schemars = { version = "0.8.11", optional = true }
serde = { version = "1.0.147", features = ["derive"], optional = true }

[dev-dependencies]
eql_factory = { path = "../eql_factory" }
insta = { workspace = true }

[features]
serde = ["dep:serde", "schemars", "rome_rowan/serde"]
